tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_64.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (- (+ ((- z) * (+ 200))));
               y := (- (- ((2 * x) * (- z))));
               y := ((- ((- 1223) DIV (- 200))) * (((- z) - (+ y)) DIV ((z - 2) - (0 + y))));
               y := (+ (+ ((z DIV 0) MOD (0 + 1))));
               y := ((((1223 MOD z) - (+ 200)) DIV ((0 - 0) DIV (x * z))) + ((+ (0 DIV 200)) DIV ((2 + x) + (2 MOD 0))));
               r := ((((+ y) + (x * 1)) + ((- y) + (+ z))) # (- ((x * 0) + (- 0))));
               z := (- (((x - x) MOD (- 0)) DIV ((x - y) - (y DIV 0))));
               q := ((((1223 DIV z) DIV (x * 2)) DIV ((+ 200) - (z MOD 1223))) = (((- 0) - (z - 2)) + (- (- 1))));
               q := ((+ (- (0 - 200))) # (((y + z) DIV (- 2)) - ((+ 1) * (1223 + x))));
  (* error *)  p := (((- (q MOD 1223)) - ((- 1) * (0 * 0))) >= ((+ (2 + 1223)) - ((+ 1) - (z + 2))))
END Test20.